[package]
name = "monoio-tcp-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
monoio = "0.2.4"
clap = { version = "4.5.40", features = ["derive"]}
env_logger = "0.11.5"
log = "0.4.27"
time = "0.3.41"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false